fix global paragraph spacing (#438)
* fix global paragraph spacing

* bump design system to v0.0.154

--- a/src/components/containers/articles/article.module.css
+++ b/src/components/containers/articles/article.module.css
@@ -25,7 +25,3 @@
   @apply mx-auto
   max-w-[43.125rem];
 }
-
-.paragraphBottomMargin {
-  @apply mb-[1.25rem];
-}
